# lpmsig1opensourcelib

./: CMakeLists.txt  LICENSE.txt  LpMatrix.c  LpMatrix.h  LpmsIG1.cpp  LpmsIG1.h  LpmsIG1I.h  LpmsIG1Registers.h  MicroMeasure.cpp  MicroMeasure.h  MicroMeasureWindows.cpp  README.md  SUMMARY.txt  SensorData.h  SensorDataI.h  SerialPort.cpp  SerialPort.h  SerialPortLinux.cpp  util.cpp  util.h  version.rc
linux_example/: CMakeLists.txt  main.cpp
ros_example/: CMakeLists.txt  package.xml
ros_example/launch/: lpmsig1.launch
ros_example/src/: lpms_be1_node.cpp  lpms_ig1_node.cpp  quat_to_euler_node.cpp
